aligned tea of the month issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,7 @@ body {
   color: seashell;
   background-color: black;
   opacity: 0.9;
+  text-align: center;
 }
 
 .header {
@@ -43,8 +44,7 @@ nav a {
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  display: block;
   padding-top: 69px;
   margin: auto;
   width: 1200px;
@@ -81,24 +81,41 @@ h2 {
   font-size: 33px;
 }
 
-h3 {
-  font-size: 1.17;
-  font-weight: bold;
+#month {
+  display: block;
+  padding-top: 60px;
+  height: 700px;
+  width: 1000px;
+  margin: auto;
 }
 
-.month {
+.five-teas {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.month img {
+.five-teas img {
   height: 200px;
   width: 300px;
 }
 
-#locations {
+.item {
   display: block;
+  padding: 5px;
+}
+
+.item span {
+  display: block;
+  padding: 5px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#locations {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
   height: 500px;
+  width: 1200px;
   padding-top: 70px;
 }
 
@@ -106,8 +123,6 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 15px;
-  text-align: center;
 }
 
 .box {
